--- a/index.html
+++ b/index.html
@@ -15,9 +15,26 @@
 </head>
 
 <body>
+<!-- Navigation Section -->
+<section class="nav-section">
+  <div class="container nav">
+    <h2 class="nav-title">Fun Bus</h2>
+    <nav class="nav-elements-container">
+      <a>Home</a>
+      <a>About Us</a>
+      <a>Blog</a>
+      <a>Contact</a>
+    </nav>
+</section>
+<!-- Header Section -->
+<section class="header-section">
+  <div class="container header">
+    <img class="header-img" src="img/fun-bus.jpg" alt="bus">
+    <h2 class="header-text"> Welcome To Fun Bus!</h2>
+    <p class="header-content"> Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wadnerlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition. </p>
+  </div>
+</section>
 
-  
-     
   <div class="container home">
    
     <section class="content-section">
